chore: setup monorepo configuration

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,10 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
+    "@repo/config": "*",
+    "@repo/types": "*",
     "@repo/ui": "*",
+    "@repo/utils": "*",
     "next": "16.1.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
