--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,6 +26,8 @@
     "better-auth": "^1.4.18",
     "cors": "^2.8.6",
     "express": "^5.2.1",
-    "helmet": "^8.1.0"
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
+    "rate-limit-redis": "^4.3.1"
   }
 }
