--- a/apps/web/components.json
+++ b/apps/web/components.json
@@ -20,6 +20,8 @@
     "hooks": "@/hooks"
   },
   "registries": {
-    "@ncdai": "https://chanhdai.com/r/{name}.json"
+    "@ncdai": "https://chanhdai.com/r/{name}.json",
+    "@bundui": "https://bundui.io/r/{name}.json",
+    "@magicui": "https://magicui.design/r/{name}"
   }
 }
