--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@base-ui/react": "^1.1.0",
     "@hookform/resolvers": "^5.2.2",
+    "@remotion/player": "^4.0.421",
+    "@remotion/shapes": "^4.0.421",
     "@tanstack/react-query": "^5.90.20",
     "better-auth": "^1.4.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "cobe": "^0.6.5",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.563.0",
     "motion": "^12.34.0",
     "next": "16.1.6",
@@ -30,6 +34,7 @@
     "react-hook-form": "^7.71.1",
     "react-resizable-panels": "^4",
     "recharts": "2.15.4",
+    "remotion": "^4.0.421",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
