fix(build): fixed env and config related

--- a/apps/proxy-bun/package.json
+++ b/apps/proxy-bun/package.json
@@ -2,13 +2,7 @@
   "name": "proxy",
   "module": "index.ts",
   "devDependencies": {
-    "@types/bun": "latest",
-    "@repo/config": "*",
-    "@repo/database": "*",
-    "@repo/queue": "*",
-    "@repo/types": "*",
-    "@repo/utils": "*",
-    "@repo/storage": "*"
+    "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5"
