--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -16,7 +16,6 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@prisma/adapter-pg": "^7.3.0",
-    "@prisma/client": "^7.3.0"
+    "@prisma/adapter-pg": "^7.3.0"
   }
 }
