--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
+    "prod": "turbo run build --filter=web --filter=worker",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
